# desktop_app

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  Dockerfile  OPS-CHECKLIST.md  README-DEPLOY-LINUX-PRODUCTION.md  README-DEPLOY-QUICKSTART.md  README-DEPLOY-WINDOWS.md  README-DEPLOY.md  README.md  config.py  deploy.sh  docker-compose.yml  eslint.config.js  index.html  install.bat  loan-assistant-api.service  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements-prod.txt  requirements.txt  run.bat  start_backend_latest.bat  tailwind.config.js  tsconfig.json  vite.config.mjs  vitest.config.ts  使用说明.txt  前端设计.md  启动说明_最新版.txt  需求文档.md
backend/: __init__.py  celery_app.py  database.py  db_models.py  document_types.py  init_db.py  main.py
backend/data/: customers.db
backend/extraction_skills/: __init__.py  base.py  enterprise_credit.py
backend/middleware/: auth.py
backend/models/: __init__.py  schemas.py
backend/routers/: __init__.py  application.py  auth.py  chat.py  chat_extraction.py  chat_helpers.py  chat_prompts.py  chat_storage.py  customer.py  dashboard.py  feishu.py  file.py  scheme.py  wiki.py
backend/scripts/: check_worker_health.py  migrate_activity_log_json.py  migrate_product_cache_json.py  migrate_users_json.py
backend/services/: __init__.py  activity_service.py  document_extractor_service.py  embedding_service.py  extraction_utils.py  index_rebuild_service.py  job_display_config.py  local_storage_service.py  markdown_profile_service.py  product_cache_service.py  profile_sync_service.py  rag_service.py  risk_assessment_service.py  sqlalchemy_storage_service.py  worker_health_service.py
backend/tasks/: __init__.py  application_tasks.py  chat_tasks.py  file_process_tasks.py  risk_tasks.py  scheme_tasks.py  task_runtime.py
data/: activity_log.json  customers.db  product_cache.json  users.json
deploy/linux/: loan-assistant-nginx.conf  loan-assistant-web.service  loan-assistant-worker.service  loan-assistant-worker@.service  loan-assistant.env.example  redis-loan-assistant.conf
deploy/systemd/: loan-assistant-celery-chat.service  loan-assistant-celery-heavy.service
prompts/: __init__.py  个人征信提取_提示词.md  个人流水提取_提示词.md  个人贷_匹配提示词.md  企业信用贷_匹配提示词.md  企业征信提取_提示词.md  企业抵押贷_匹配提示词.md  企业流水提取_提示词.md  征信判断.md  扣子智能体提示词.md  抵押物信息提取提示词.md  方案匹配智能体提示词.md  水母报告提取提示词.md  申请表模板_个人贷款.md  申请表模板_企业贷款.md  财务数据提取_提示词.md  贷款意图识别_提示词.md  贷款申请表填写助手_提示词.md
prompts/个人纳税/: 公积金提示词.md
scripts/: auto-bump-version.mjs  generate-build-info.mjs  prepare-version-meta.mjs  run-build-with-version.mjs  versioning.mjs
services/: __init__.py  ai_service.py  feishu_service.py  file_service.py  ocr_service.py  wiki_service.py
src/: App.tsx  index.css  main.tsx  setupTests.ts  vite-env.d.ts
src/components/: AdminUsersPage.tsx  ApplicationDiffCatalogPanel.tsx  ApplicationFieldRow.tsx  ApplicationPage.tsx  ApplicationResultCard.tsx  ApplicationSectionCard.tsx  ChatPage.tsx  CustomerDataPage.tsx  CustomerListPage.tsx  DashboardPage.tsx  DataDisplayComponents.tsx  ErrorToast.tsx  FieldDiffPreview.tsx  FieldDiffReview.tsx  LoginPage.tsx  SchemeMatch.tsx  UploadPage.tsx  applicationDiffCopy.ts  applicationDiffUtils.ts
src/config/: jobDisplay.ts  systemInfo.ts
src/context/: AppContext.tsx  index.ts
src/hooks/: index.ts  useAbortController.ts  useConversationState.ts  useLoading.ts  useResultPanelState.ts  useTaskState.ts
src/services/: api.ts  index.ts  types.ts
static/: index.html
utils/: README.md  __init__.py  checkpoint_manager.py  context_compressor.py  handoff_validator.py  html_form.py  json_parser.py  memory_manager.py  reflection_engine.py  retry_handler.py  task_logger.py
(+19 files in other folders)
